force-app/main/default/objects/VoiceMap__c/VoiceMap__c.object-meta.xml
<CustomObject>
    <description>Maps device, user, speaker, etc. Ids to SFDC</description>
    <label>Voice Map</label>
    <nameField>
        <label>VoiceMap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voice Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>