force-app/main/default/objects/VoiceMap__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>The name to display for the mapping</description>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>