force-app/main/default/objects/VoiceMap__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the device, service, etc.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>