force-app/main/default/objects/VoiceMap__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>User_Id, Device_Id, Speaker_Id, etc.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>