force-app/main/default/objects/VoiceMap__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>The SFDC User Id associated with the remote Id</description>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>