force-app/main/default/objects/VoiceMap__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>The name of the device/service vendor</description>
    <label>Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>